id: 08-webview cause: 治理  solution: done

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,4 +31,12 @@
     <color name="maoyan_common_default_shadowback_color">#fff</color>
     <color name="maoyan_common_default_textColor">#000</color>
     <color name="shadow">#F2000000</color>
+    <color name="maoyan_adx_indicator_default_bg_color">#88eceef3</color>
+    <color name="maoyan_adx_indicator_default_selected_color">#ffffff</color>
+
+    <color name="banner_bottom_bar_bg_day">#65000000</color>
+    <color name="banner_bottom_bar_bg_night">#6508090a</color>
+    <color name="dot_bg">#00ff0000</color>
+    <color name="dot_select_color">#ffffffff</color>
+    <color name="dot_unselect_color">#50ffffff</color>
 </resources>
