--- a/app/src/main/res/layout/activity_button_shape_other.xml
+++ b/app/src/main/res/layout/activity_button_shape_other.xml
@@ -558,6 +558,13 @@
 
 
         </com.mao.jetpack.widget.shadowother.ShadowLayoutMY>
+
+        <TextView
+            android:id="@+id/tvMMM"
+            android:layout_width="wrap_content"
+            android:text="首页"
+            android:textSize="20sp"
+            android:layout_height="wrap_content"/>
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 
