--- a/app/src/main/res/layout/activity_constraintlayout.xml
+++ b/app/src/main/res/layout/activity_constraintlayout.xml
@@ -107,6 +107,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            tools:ignore="MissingConstraints"
             android:layout_marginTop="10dp">
 
             <!--
@@ -147,11 +148,13 @@
                 android:id="@+id/viewf1"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
+                app:layout_constraintWidth_default="wrap"
                 android:background="@color/colorPrimaryDark" />
 
             <View
                 android:id="@+id/viewf2"
                 android:layout_width="80dp"
+                app:layout_constraintWidth_default="wrap"
                 android:layout_height="80dp"
                 android:background="@color/colorPrimaryDark" />
 
@@ -159,6 +162,7 @@
                 android:id="@+id/viewf3"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
+                app:layout_constraintWidth_default="wrap"
                 android:layout_margin="8dp"
                 android:background="@color/colorPrimaryDark" />
 
@@ -166,11 +170,13 @@
                 android:id="@+id/viewf4"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
+                app:layout_constraintWidth_default="wrap"
                 android:background="@color/colorPrimaryDark" />
 
             <View
                 android:id="@+id/viewf5"
                 android:layout_width="80dp"
+                app:layout_constraintWidth_default="wrap"
                 android:layout_height="80dp"
                 android:background="@color/colorPrimaryDark" />
 
